--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>17.0.6</version>
+            <version>17.0.6</version> <!-- Replace with your JavaFX version -->
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
